tests/tests/legacy_kustomizations/argo/test_data/expected/apps_v1_deployment_argo-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: argo
    app.kubernetes.io/instance: argo-v2.3.0
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: argo
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: v2.3.0
    kustomize.component: argo
  name: argo-server
  namespace: kubeflow
spec:
  selector:
    matchLabels:
      app: argo-server
      app.kubernetes.io/component: argo
      app.kubernetes.io/instance: argo-v2.3.0
      app.kubernetes.io/managed-by: kfctl
      app.kubernetes.io/name: argo
      app.kubernetes.io/part-of: kubeflow
      app.kubernetes.io/version: v2.3.0
      kustomize.component: argo
  template:
    metadata:
      labels:
        app: argo-server
        app.kubernetes.io/component: argo
        app.kubernetes.io/instance: argo-v2.3.0
        app.kubernetes.io/managed-by: kfctl
        app.kubernetes.io/name: argo
        app.kubernetes.io/part-of: kubeflow
        app.kubernetes.io/version: v2.3.0
        kustomize.component: argo
    spec:
      containers:
      - args:
        - server
        image: argoproj/argocli:v2.8.0
        name: argo-server
        ports:
        - containerPort: 2746
          name: web
        readinessProbe:
          httpGet:
            path: /
            port: 2746
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 20
      serviceAccountName: argo-server
